name:                fca
version:             0.1.0.0
synopsis:            Toy implementation of formal concept analysis in Haskell.
homepage:            http://passingcuriosity.com/fca/
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >=4.5 && <4.7
                     , bytestring >=0.9 && <0.11
                     , cassava >=0.2 && <0.3
                     , containers >= 0.4 && <0.6
                     , text >=0.10 && <0.12
                     , vector >=0.10 && <0.11
  default-language:    Haskell2010
  exposed-modules:     Data.FCA

executable fca
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.5 && <4.7
                     , bytestring >=0.9 && <0.11
                     , cassava >=0.2 && <0.3
                     , containers >= 0.4 && <0.6
                     , text >=0.10 && <0.12
                     , vector >=0.10 && <0.11
                     , fca >=0.1 && <0.2
  default-language:    Haskell2010

Test-Suite fca-test
  type:                exitcode-stdio-1.0
  main-is:             fca-test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.5 && <4.7
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck >=2.4 && <2.5
                     , fca >=0.1 && <0.2

