name:                fca
version:             0.1.0.0
synopsis:            Toy implementation of formal concept analysis in Haskell.
homepage:            http://passingcuriosity.com/fca/
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >=4.5 && <4.8
                     , bytestring
                     , cassava
                     , containers
                     , text
                     , vector
  default-language:    Haskell2010
  exposed-modules:     Data.FCA

executable fca
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , text
                     , vector
                     , fca
  default-language:    Haskell2010

test-suite fca-test
  type:                exitcode-stdio-1.0
  main-is:             fca-test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , fca

